Kubernetes/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: utilities
spec:
  selector:
    app: homepage
  ports:
    - name: http
      port: 80
      targetPort: http
